Fixing images path and portfolio white space

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,4 +163,8 @@ input {
     padding: 10px;
 }
 
-
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
